# ndn-python-svs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: chat_with_security.py  chat_with_security_prep.py  chat_with_security_preps.py
src/ndn/svs/: security.py  svs_base.py  svs_shared.py
svs/: core.py  security.py  svs_base.py
