[tool.poetry]
name = "ndn-python-svs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "svs"}]

[tool.poetry.dependencies]
python = "^3.10"
ndn-storage = "^0.2.3"
envelope = { git = "https://github.com/tianyuan129/trust-info-base.git" }

[tool.poetry.group.dev.dependencies]
python-ndn = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
