[tool.poetry]
name = "ndn-python-svs"
version = "0.1.2"
description = "NDN SVS package for Hydra"
authors = ["See Authors.rst"]
readme = "README.md"
packages = [{include = "svs"}]

[tool.poetry.dependencies]
python = "^3.10"
ndn-storage = "^0.2.3"
ndn-lvs-envelope = "^0.1.1"

[tool.poetry.group.dev.dependencies]
python-ndn = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
